# YurisHook

./: Cargo.toml
projects/sub_projects/: Cargo.toml
projects/sub_projects/src/: lib.rs  main.rs
projects/win-memory/: Cargo.toml
projects/win-memory/src/: errors.rs  lib.rs
projects/win-memory/src/process/: handle.rs  mod.rs  module.rs  tlhelp32.rs
projects/yuri-debugger/: Cargo.toml
projects/yuri-debugger/src/: main.rs
projects/yuri-debugger/src/errors/: display.rs
projects/yuri-hooks/: Cargo.toml
projects/yuri-hooks/src/: lib.rs  main.rs
projects/yuri-hooks/src/ai_hooks/: mod.rs
projects/yuri-hooks/src/crate_hooks/: mod.rs
projects/yuri-hooks/src/errors/: convert.rs  display.rs  mod.rs
projects/yuri-hooks/src/game_mode_hooks/: mod.rs
projects/yuri-hooks/src/game_option_hooks/: mod.rs
projects/yuri-hooks/src/game_strings/: mod.rs
projects/yuri-hooks/src/helpers/: mod.rs
projects/yuri-hooks/src/map_hooks/: mod.rs
