[package]
name = "yuri_hooks"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/RustTemplate"
repository = "https://github.com/oovm/RustTemplate"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[lib]
name = "gamemdx"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "gamemdx"
path = "src/main.rs"

[dependencies]
ctor = "0.2.8"
dll-syringe = "0.15.2"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
